@@ -8,6 +8,7 @@ import net.geant.nmaas.portal.exceptions.OnlyOneConfigurationSupportedException;
 import net.geant.nmaas.portal.persistence.entity.Configuration;
 import net.geant.nmaas.portal.persistence.entity.InternationalizationSimple;
 import net.geant.nmaas.portal.persistence.repositories.ConfigurationRepository;
+import net.geant.nmaas.portal.persistence.repositories.DomainRepository;
 import net.geant.nmaas.portal.persistence.repositories.InternationalizationSimpleRepository;
 import net.geant.nmaas.portal.service.ConfigurationManager;
 import net.geant.nmaas.scheduling.BulkDeploymentScheduleInit;
@@ -27,6 +28,7 @@ public class ConfigurationManagerImpl implements ConfigurationManager {
     private final InternationalizationSimpleRepository internationalizationRepository;
     private final ScheduleManager scheduleManager;
     private final BulkDeploymentJob bulkDeploymentJob;
+    private final DomainRepository domainRepository;
     private final ModelMapper modelMapper;
 
     @Override
@@ -40,7 +42,10 @@ public class ConfigurationManagerImpl implements ConfigurationManager {
             throw new OnlyOneConfigurationSupportedException("Configuration already exists. It can be either removed or updated");
         }
         Configuration configuration = modelMapper.map(configurationView, Configuration.class);
-        this.repository.save(configuration);
+        if (configurationView.getDefaultDomainForSsoUsers() != null) {
+            configuration.setDefaultDomainForSsoUsers(domainRepository.getReferenceById(configurationView.getDefaultDomainForSsoUsers()));
+        }
+        repository.save(configuration);
         return configuration.getId();
     }
 
@@ -50,15 +55,19 @@ public class ConfigurationManagerImpl implements ConfigurationManager {
         if (configuration.isEmpty()) {
             throw new ConfigurationNotFoundException("Configuration with id " + id + " not found in repository");
         }
+        Configuration configurationToUpdate = configuration.get();
         InternationalizationSimple internationalization = internationalizationRepository.findByLanguageOrderByIdDesc(updatedConfiguration.getDefaultLanguage())
                 .orElseThrow(() -> new IllegalArgumentException("Language not found"));
         if (!internationalization.isEnabled()) {
             throw new IllegalStateException("Default language must be active");
         }
-        if (!updatedConfiguration.getBulkDeploymentJobCron().equalsIgnoreCase(configuration.get().getBulkDeploymentJobCron())) {
+        if (!updatedConfiguration.getBulkDeploymentJobCron().equalsIgnoreCase(configurationToUpdate.getBulkDeploymentJobCron())) {
             // job needs to be recreated
             scheduleManager.deleteJob(BulkDeploymentScheduleInit.BULK_DEPLOYMENT_JOB);
             scheduleManager.createJob(bulkDeploymentJob, BulkDeploymentScheduleInit.BULK_DEPLOYMENT_JOB, updatedConfiguration.getBulkDeploymentJobCron());
+        }
+        if (updatedConfiguration.getDefaultDomainForSsoUsers() != null) {
+            configurationToUpdate.setDefaultDomainForSsoUsers(domainRepository.getReferenceById(updatedConfiguration.getDefaultDomainForSsoUsers()));
         }
         repository.save(modelMapper.map(updatedConfiguration, Configuration.class));
     }
@@ -67,6 +76,6 @@ public class ConfigurationManagerImpl implements ConfigurationManager {
         if (repository.count() > 1 || repository.count() == 0) {
             throw new IllegalStateException("Found " + repository.count() + " configurations instead of one");
         }
-        return repository.findAll().get(0);
+        return repository.findAll().getFirst();
     }
 }
